--- a/templates/friends.html
+++ b/templates/friends.html
@@ -3,7 +3,7 @@
 {% block head %}
 <head>
     <link rel='icon' href='https://mc-heads.net/head/{{ uuid }}'/>
-    <title>{{ username }}'s Friends | Tiramisu</title>
+    <title>{{ username }}'s Friends | tiramisu</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
