--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
 <div class="header logo">
-	<a href='/'><img src='https://raw.githubusercontent.com/gist/literaiiy/33ee272214fd81eb35a54f083bf1a4ed/raw/90ea53a78161bbda95c00fa17c4ddd88c015a27c/tiramisudelta2.svg' alt="Tiramisu Logo" height='6%' width='auto'></a>
+	<a href='/'><img src='https://raw.githubusercontent.com/gist/literaiiy/33ee272214fd81eb35a54f083bf1a4ed/raw/90ea53a78161bbda95c00fa17c4ddd88c015a27c/tiramisudelta2.svg' alt="tiramisu Logo" height='6%' width='auto'></a>
 	<form action="/" method="POST">
 		<input type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
 		<script>
@@ -16,9 +16,8 @@
 
 {% block head %}
 <head>
-<title>tiramisu - something or other</title>
+<title>tiramisu - Hypixel Player Stats Analysis & Name History</title>
 {% endblock %}
-<link rel="shortcut icon" href="/static/tiramisu.ico">
 </head>
 
 <div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
