--- a/static/base.scss
+++ b/static/base.scss
@@ -9,6 +9,9 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
                                     MM                                                           
                                   .JMML.                                                      */
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 // h1{background-color:#c2c2c2;text-align:center;font-family:'Courier New',Courier,monospace}
 // body{background-color:white;text-align:center}
 // table{margin-left:auto;margin-right:auto}
