--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,18 @@
 <meta charset="UTF-8">
-
+<div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
 <link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
-<div class="header logo">
-	<a href='/'><img src='https://raw.githubusercontent.com/gist/literaiiy/33ee272214fd81eb35a54f083bf1a4ed/raw/90ea53a78161bbda95c00fa17c4ddd88c015a27c/tiramisudelta2.svg' alt="tiramisu Logo" height='6%' width='auto'></a>
-	<form action="/" method="POST">
-		<input type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
+<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Interfamily=Meddon&family=Allerta&family=Palanquin:wght@400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
+
+<div class="sticky top-0 bg-gray-100 mb-8 flex z-40 shadow-md">
+	<a href='/'><img class='place-self-center h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'></a>
+	<form class='place-self-center' action="/" method="POST">
+		<input type="text" class='px-3 py-3 relative bg-white bg-white rounded text-sm border-0 shadow outline-none focus:outline-none w-100' name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
 		<script>
 			if ( window.history.replaceState ) {
 				window.history.replaceState( null, null, window.location.href );
@@ -19,9 +27,6 @@
 <title>tiramisu - Hypixel Player Stats Analysis & Name History</title>
 {% endblock %}
 </head>
-
-<div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
-<link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
 
 {% block content %}
 <div class='h2d'>
