--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
 <link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
-<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
