MAYBE: rest of baseline new CSS done, fixed pesky scripting bug, experimenting on header

--- a/static/base.scss
+++ b/static/base.scss
@@ -31,7 +31,7 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
 // .desc{text-align:left}
 
 // .uuid{margin-bottom:0;font-size:16px;margin-top:15px;transition:.4s}
-// footer{font-family:'Inconsolata',monospace;text-align:center;bottom:0}
+footer{font-family:'Inconsolata',monospace;text-align:center;bottom:0}
 // .table{width:auto;height:auto;max-height:65%;line-height:3em;overflow:auto;margin-top:35px;margin-bottom:35px}
 // table{width:auto;margin-left:auto;margin-right:auto;border-spacing:1px 1px}
 // .tabbol{width:auto;margin-left:auto;margin-right:auto;border-spacing:30px 3px;padding-top:15px}
