--- a/static/base.scss
+++ b/static/base.scss
@@ -8,47 +8,33 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
  YMbmd'   `Ybmd9'.JMML  JMML  JMML. MMbmmd'   `Ybmd9'.JMML  JMML.`Mbmmd'.JMML  JMML.`MbmoM9mmmP' 
                                     MM                                                           
                                   .JMML.                                                      */
+@font-face {
+  font-family: 'Inconsolata';
+  src: 'https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap';
+}
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-// h1{background-color:#c2c2c2;text-align:center;font-family:'Courier New',Courier,monospace}
-// body{background-color:white;text-align:center}
-// table{margin-left:auto;margin-right:auto}
-// .logo{position:-webkit-sticky;position:sticky;top:0;background-color:honeydew;top:0;background-color:#3e3d53;margin-top:-8px;margin-bottom:-8px;z-index:15}
-// .header{position:sticky;top:0;z-index:6}
-// .subtitle{font-family:'Inconsolata',monospace}
-// body{font-family:'Inter';text-align:center;margin:0}
-* {font-family:'Inter'; text-align:center}
+* {font-family:'Inconsolata'; text-align:center}
 
 // ? Keeping these for now
-// .username{font-size:42px}
 .h2d{font-size:42px}
 .h3d{font-size:22px}
-// .paragraphd{margin-left:25%;margin-right:25%}
-// .footerd{font-family:'Inconsolata',monospace;padding-top:15px;padding-bottom:15px}
-// .stats{font-family:'Inter';text-align:center}
-// .desc{text-align:left}
-
-// .uuid{margin-bottom:0;font-size:16px;margin-top:15px;transition:.4s}
-footer{font-family:'Inconsolata',monospace;text-align:center;bottom:0}
-// .table{width:auto;height:auto;max-height:65%;line-height:3em;overflow:auto;margin-top:35px;margin-bottom:35px}
-// table{width:auto;margin-left:auto;margin-right:auto;border-spacing:1px 1px}
-// .tabbol{width:auto;margin-left:auto;margin-right:auto;border-spacing:30px 3px;padding-top:15px}
-// h1{font-size:48px;font-weight:normal}
-// h2{font-size:42px;margin:5px}
-// h3{font-size:22px}
+footer{text-align:center;bottom:0}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active
+{
+ -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
 
 // ? Colors for namehis links
 a{color:royalblue}
 .nhfirst{color:#87afeb}
 .nhmiddle{color:cornflowerblue}
-
-// th{text-align:left}
-// .scrollbar{margin-left:auto;margin-right:auto}
-// .subtitle{font-family:"Meddon",cursive}
-// .uuid{font-weight:normal;font-family:"Inconsolata",monospace}
-                                               
 /*                  ,,                          
                  `7MM                          
                    MM                          
@@ -112,42 +98,6 @@ YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8
 YA.   ,A9 MM     MM    MM YM.    ,  MM     
 `Ybmd9'  `Mbmo.JMML  JMML.`Mbmmd'.JMML.    */	 
 
-// ::-webkit-scrollbar{width:10px;height:10px}
-// ::-webkit-scrollbar-track{background:transparent}
-// ::-webkit-scrollbar-thumb{background:#888;border-radius:15px}
-// ::-webkit-scrollbar-thumb:hover{background:#555;border-radius:15px}
-// ::-webkit-scrollbar-track-piece{width:10px}
-
-// // Columns
-// ::-webkit-scrollbar{width:10px;height:10px}
-// ::-webkit-scrollbar-track{background:transparent}
-// ::-webkit-scrollbar-thumb{background:#888;border-radius:15px}
-// ::-webkit-scrollbar-thumb:hover{background:#555;border-radius:15px}
-// ::-webkit-scrollbar-track-piece{width:10px}
 .columnZ{float:left;width:32%;margin-top:15px}
 .columnA{float:left;width:35%;padding-right:1%}
 .columnB{float:left;width:32%}
-// .row:after{content:"";display:table;clear:both}
-// .tab{overflow:hidden;border:1px solid #ccc;background-color:#f1f1f1}
-// .tab button{background-color:inherit;float:left;border:0;outline:0;cursor:pointer;padding:14px 16px;transition:.3s}
-// .tab button:hover{background-color:#ddd}
-// .tab button.active{background-color:#ccc}
-// .tabcontent{display:none;padding:6px 12px;border:1px solid #ccc;border-top:0}
-// .swgeneral{width:auto}
-// .leftsw{width:auto}
-// .rightsw{width:auto}
-// .graylink{color:black}
-// input{height:35px;width:20%;font-size:auto;margin-bottom:25px;border:darkgray solid 2px;border-radius:4px;font-family:'Inter';text-align:center}
-// .searchbutton{background-color:transparent;border-color:transparent;height:35px;width:35px;cursor:pointer}
-// .searchbutton:focus{outline-width:0}
-// .modal{display:none;position:fixed;z-index:1;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.4)}
-// .modal-content{background-color:#fefefe;margin:15% auto;padding:20px;border:1px solid #888;width:25%;align-content:center;border-radius:15px}
-// .loader{border:16px solid #f3f3f3;border-top:16px solid #3498db;border-radius:50%;width:120px;height:120px;animation:spin 2s linear infinite;margin-left:auto;margin-right:auto}
-// @keyframes spin{0%{transform:rotate(0deg)}
-// 100%{transform:rotate(360deg)}
-// }#loadOverlay{display:none}
-// .accordion{background-color:#eee;color:#444;cursor:pointer;padding:18px;width:100%;border:0;text-align:left;outline:0;font-size:15px;transition:.4s}
-// .active,.accordion:hover{background-color:#ccc}
-// .accordion:after{content:'\002B';color:#777;font-weight:bold;float:right;margin-left:5px}
-// .active:after{content:"\2212"}
-// .panel{padding:0 18px;background-color:white;max-height:0;overflow:hidden;transition:max-height .2s ease-out}
