--- a/static/datatables.scss
+++ b/static/datatables.scss
@@ -66,7 +66,18 @@ table.dataTable,table.dataTable th,table.dataTable td{box-sizing:content-box}
 .dataTables_wrapper .dataTables_length{float:left}
 .dataTables_wrapper .dataTables_length select{border:1px solid #aaa;border-radius:3px;padding:5px;background-color:transparent;padding:4px}
 .dataTables_wrapper .dataTables_filter{float:right;text-align:right}
-.dataTables_wrapper .dataTables_filter input{border:1px solid #aaa;border-radius:3px;padding:5px;background-color:transparent;margin-left:3px}
+
+.dataTables_wrapper .dataTables_filter input {
+    border-radius: 0.75rem;
+    padding: 5px;
+    margin-bottom:5px;
+    background-color: white;
+    width: 10rem;
+    placeholder: 'Search...';
+    --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    outline: none;
+}
 .dataTables_wrapper .dataTables_info{clear:both;float:left;padding-top:.755em}
 .dataTables_wrapper .dataTables_paginate{float:right;text-align:right;padding-top:.25em}
 .dataTables_wrapper .dataTables_paginate .paginate_button{box-sizing:border-box;display:inline-block;min-width:1.5em;padding:.5em 1em;margin-left:2px;text-align:center;text-decoration:none!important;cursor:pointer;*cursor:hand;color:#333!important;border:1px solid transparent;border-radius:2px}
@@ -89,4 +100,3 @@ table.dataTable,table.dataTable th,table.dataTable td{box-sizing:content-box}
 }@media screen and (max-width:640px){.dataTables_wrapper .dataTables_length,.dataTables_wrapper .dataTables_filter{float:none;text-align:center}
 .dataTables_wrapper .dataTables_filter{margin-top:.5em}
 }
-.dataTables_filter input { width: 250px; placeholder:'Search...'}
