--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,27 @@
 <meta charset="UTF-8">
-<div id="loadOverlay" style="background-color:#fff; position:absolute; top:0px; left:0px; width:100%; height:100%; z-index:2000;"></div>
 <link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
 <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.scss') }}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Interfamily=Meddon&family=Allerta&family=Palanquin:wght@400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
 
-<div class="sticky top-0 bg-gray-100 mb-8 flex justify-around z-40 shadow-md">
-	<a href='/'><img class='flex-none place-self-center h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'>
+<div class="grid grid-cols-3 sticky top-0 bg-gray-100 mb-8 z-40 shadow place-content-center">
+	<a href='/'><img class='h-24 ml-4' src='https://raw.githubusercontent.com/gist/literaiiy/62febf3d1f9a035b469e06bdef8456bc/raw/223650b7551fd90e7747e687a2643cdb1cdebf9d/teeramouse.svg' alt="tiramisu Logo" height='6%' width='auto'>
 	</a>
-	<form class='flex-none place-self-center' action="/" method="POST">
-		<input type="text" class='px-3 py-3 relative bg-white bg-white rounded text-sm border-0 shadow outline-none focus:outline-none w-100' name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
-		<script>
-			if ( window.history.replaceState ) {
-				window.history.replaceState( null, null, window.location.href );
-			}
-		</script>
-		<input class="searchbutton" type="submit" value ="Q">
+	<form class='p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-5 shadow' action="/" method="POST">
+		<input class='w-full py-3 outline-none h-full' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="on" spellcheck="false" placeholder="Search username or UUID">
+		<button class="absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
+			<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"width="24" height="24"viewBox="0 0 50 50"style=" fill:#9FA6B2;"><path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path></svg>
+		</button>
 	</form>
-	<div class="flex flex-grow">
-		<button class='flex-none'>Text button</button>
-		<button class='flex-none'>More text</button>
-		<button class='flex-none'>🏁</button>
-		<button class="flex-none">🌞</button>
+	<div class="grid grid-cols-4">
+		<button class=''>Text button</button>
+		<button class=''>More text</button>
+		<button class=''>🏁</button>
+		<button class="">🌞</button>
 	</div>
 </div>
 
@@ -94,7 +90,6 @@
 <p>Welcome to tiramisu. Lorem ipsum some dumb BS here. I was made by floraphile in 2021, something about Visual Studio Code, which is a software created by Microsoft somewhere after 2015. Wikipedia might have a good article on it, but I'm not sure, because I didn't look it up. This is just filler text. I don't even know if this is going to wrap correctly.</p>
 </div>
 {% endblock %}
-
 
 {% block footer %}
 <footer>
