--- a/static/base.scss
+++ b/static/base.scss
@@ -17,11 +17,11 @@ YM.    , YA.   ,A9 MM    MM    MM   MM   ,AP YA.   ,A9 MM    MM YM.    ,  MM    
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-* {font-family:'Inconsolata'; text-align:center}
+* {font-family:'Inconsolata'; line-height: 1.35;}
 
 // ? Keeping these for now
-.h2d{font-size:42px}
-.h3d{font-size:22px}
+// .h2d{font-size:42px}
+// .h3d{font-size:22px}
 footer{text-align:center;bottom:0}
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
